Changes for 2.1.7

New features:
..F....... [ZBX-6911] added functionality to save positions of block on dashboard page in profiles table (Vitalij)

Bug fixes:
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in page filtering; thanks to Bernhard Schildendorfer from SEC Consult for the report (Eduard, Pavels)
A.F....... [ZBX-7091] fixed SQL inection vulnerabilities in dashboard favourite managing; thanks to Lincoln, a member of Corelan Team, for the report (Eduard, Pavels)
..F....... [ZBX-6994] fixed logic of SQL creation, removed unneeded i.flags IN (0,4) from SQL, if i.flags is set from filter or is null (Vitalij)
..F....... [ZBX-6993] fixed JS errors in various pages having a child node with high ID value (Ivo)
..F....... [ZBX-7032] fixed possibility to add "ICMP ping" check in Configuration > Discovery (Ivo)
........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)

--------------------------------------------------------------------------------
Changes for 2.1.6

New features:
..F....... [ZBX-2616] upgraded the bundled DejaVu font from 2.33 to 2.34 (Richlv)
..F....... [ZBXNEXT-1763] added host related information under Monitoring (Oleg)
..F....... [ZBX-6983] changed the "Status of host group triggers" and "Status of host triggers" screen elements and the "Latest 20 issues" to display triggers without events (Pavels)
..F....... [ZBX-6983] renamed the "Status of host group triggers" screen element to "Latest host group issues" and "Status of host triggers" to "Latest host issues" (Pavels)

Bug fixes:
..F....... [ZBX-7022] fixed errors in Monitoring > Screens page when screen item has group and host dropdowns (Ivo)
..F....... [ZBX-6978] fixed leading and trailing spaces for translatable strings (Ivo)
..F....... [ZBX-7033] replaced HTML special characters with corresponding entity names and unicode characters (Ivo)