@@ -1020,7 +1020,7 @@ class CHostPrototype extends CHostBase {
 			self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
 		}
 
-		parent::link($templateIds, $targetIds);
+		return parent::link($templateIds, $targetIds);
 	}
 
 	/**
